--- a/laravel/.env.example
+++ b/laravel/.env.example
@@ -11,7 +11,7 @@ DB_CONNECTION=mysql
 DB_HOST=host.docker.internal
 DB_PORT=3306
 DB_DATABASE=pollApp
-DB_USERNAME=root
+DB_USERNAME=pollAppUser
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
