--- a/.env.example
+++ b/.env.example
@@ -6,15 +6,15 @@ LOCAL_WORKING_DIR=./laravel/
 
 REMOTE_WORKING_DIR=/var/www/html/
 
-PHP_IDE_CONFIG='serverName=someServer'
+PHP_IDE_CONFIG='serverName=docker'
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=host.docker.internal
 DB_PORT=3306
 DB_DATABASE=pollApp
-DB_USERNAME=
+DB_USERNAME=pollAppUser
 DB_PASSWORD=
 DB_PASSWORD_ROOT=
